<resources>
    <string name="app_name">TestCrud</string>
    <string name="logo_descriptor">Logo Austria</string>
    <!--  Hints (Placeholder) del formulario  -->
    <string name="pass_hint">Contraseña</string>
    <string name="mail_hint">Correo</string>
    <string name="surname_hint">Apellido</string>
    <string name="name_hint">Nombre</string>

    <string name="workers_list">Escoge un departamento</string>

    <string-array name="spinner_array">
        <item>Comercial</item>
        <item>RRHH</item>
        <item>Técnicos</item>
    </string-array>
</resources>
